--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF AI Assistant</title>
+    <title>DocuSage</title>
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="shortcut icon" href="/static/assets/ai.png" type="image/x-icon">
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>PDF AI Assistant</h1>
+            <h1>DocuSage : A PDF AI Assistant</h1>
             <p>Upload multiple PDFs and ask questions about their content</p>
         </header>
 
